--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -1,4 +1,12 @@
+
 ja:
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            username:
+              taken: "は既に他のユーザーに使われています。"
   errors:
     messages:
       not_found: "は見つかりませんでした"
@@ -7,6 +15,7 @@ ja:
 #      already_confirmed: "was already confirmed"
       not_locked: "は凍結されていません"
 #      not_locked: "was not locked"
+      not_saved: "保存出来ませんでした"
 
   devise:
     failure:
